Corrected padding on mobile header so icons are centered.

--- a/rsrcs/css/style.css
+++ b/rsrcs/css/style.css
@@ -181,6 +181,10 @@ nav a {
     display: none;
   }
 
+  header {
+    padding-left: 0px;
+  }
+
   .jumbotron {
     display: block;
     padding: 0 0 2rem 0;
